2008-11-30  Matthias Clasen  <mclasen@redhat.com>

	* glib/running.sgml: Mention all and help special options in
	debug envvars.

2008-11-30  Matthias Clasen  <mclasen@redhat.com>

	Bug 562538 – GObject interface tutorial shouldn't finalise with
	"Please forget everything"

	* gobject/tut_gtype.xml: Remove the questionable closing sentence
	and all references to private functions. Pointed out by Christian
	Dywan.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 559452 – GObject Reference Manual (typo)
	Bug 559462 – GObject Reference Manual (typo)
	Bug 559517 – GObject Reference Manual (typo)

	* gobject/tut_howto.xml:
	* gobject/tut_gsignal.xml: 
	* gobject/tut_gobject.xml: Fix typos, found by Andrew Feren.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: Add g_app_info_get_commandline

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/keyfile.sgml: Explain locale identifiers in
	more detail

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 562549 – g_byte_array_free should tell how free data

	* glib/tmpl/arrays_byte.sgml: Improve docs, proposed by
	Guillaume Desmottes

2008-11-21  Matthias Clasen  <mclasen@redhat.com>

	* glib/Makefile.am:
	* gobject/Makefile.am:
	* gio/Makefile.am: Use a new gtk-doc feature to generate
	much nicer indices.

2008-11-14  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: Add G_STATIC_ASSERT and friends

2008-11-14  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: Add G_FILE_ATTRIBUTE_PREVIEW_ICON

2008-11-10  Behdad Esfahbod  <behdad@gnome.org>

	Bug 559448 – GObject Reference Manual (typo)

	* gobject/tut_gobject.xml: Fix typo.

2008-11-03 Matthias Clasen  <mclasen@redhat.com>

	Bug 552776 – ac_cv_func_posix_getgrgid_r not mentioned

	* glib/cross.sgml: Mention ac_cv_func_posix_getgrgid_r.

2008-10-29 16:04:38  Tim Janik  <timj@gtk.org>

	* glib/tmpl/macros_misc.sgml: Clarified/added docs for
	G_STRINGIFY, G_PASTE and G_STATIC_ASSERT, based on